[package]
name = "asset_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
encoding = "0.2.33"
websocket = "0.27.0"
pnet = "0.34.0"
notify = "6.1.1"
once_cell = "1.19.0"
rustls = "0.23.4"
rustls-pemfile = "2.1.2"
tokio-rustls = "0.26.0"
pollster = "0.3.0"
tokio = {version = "1.37.0", features = ["full"]}
webpki = "0.22.4"